# backend-mitre-technique-service

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROGRESS.md  Pipfile  README.md  config.yml  manage.py  pyproject.toml  tox.ini
.github/workflows/: docker-image-push.yml  github-actions.yml
crczp/mitre_common_lib/: crczp_config.py  crczp_service_config.py  exc_handler.py  exceptions.py
crczp/mitre_matrix_visualizer_app/: apps.py  result.html  serializers.py  urls.py  views.py
crczp/mitre_matrix_visualizer_app/lib/: mitre_matrix_generator.py  mitre_techniques_client.py  technique.py
crczp/mitre_matrix_visualizer_app/templates/: mitre_attack_backup_data
crczp/mitre_matrix_visualizer_app/tests/: test_client.py  test_generator.py
crczp/mitre_technique_project/: settings.py  urls.py  wsgi.py
crczp/mitre_technique_project/tests/: settings.py
kypo/: settings.py  urls.py  wsgi.py
kypo/mitre_common_lib/: exc_handler.py  exceptions.py  kypo_config.py  kypo_service_config.py
kypo/mitre_matrix_visualizer_app/: KypoServiceConfig.py  apps.py  urls.py  views.py
kypo/mitre_matrix_visualizer_app/lib/: mitre_matrix_generator.py  mitre_techniques_client.py
kypo/mitre_matrix_visualizer_app/templates/: FILE_template.jinja2  result.html  (+9 more)
kypo/mitre_technique_project/: settings.py  urls.py  wsgi.py
mitre_matrix_visualizer_app/: urls.py  views.py
mitre_matrix_visualizer_app/lib/: mitre_matrix_generator.py  mitre_techniques_client.py
mitre_matrix_visualizer_app/templates/: COVID-19_Truth_seeker_with_techniques.json  Captain_Slovakistan_with_techniques.json  Kobylka_with_techniques.json  result.html  template.jinja2  test.json
mitre_matrix_visualizer_app/tests/: test_client.py
mitre_technique_project/: urls.py  wsgi.py
mitre_technique_project/tests/: settings.py
test_definition/: adaptive-training.json
tests/: __init__.py
(+4 files in other folders)
